--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,15 @@ edition = "2021"
 miniquad = "0.4.0-alpha"
 fontdue = "0.5.2"
 image = "0.24"
+log = "0.4.19"
+
+[target.'cfg(target_os = "android")'.dependencies]
+android_logger = "0.13"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+simplelog = "0.12.1"
+
+[package.metadata.android.activity_attributes]
+"android:exported" = "true"
+"android:windowSoftInputMode" = "adjustResize"
 
