--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-miniquad = "0.4.0-alpha"
+#miniquad = "0.4.0-alpha"
+miniquad = { git = "https://github.com/not-fl3/miniquad" }
 fontdue = "0.5.2"
 image = "0.24"
 log = "0.4.19"
