--- a/fagman/DEBIAN/control
+++ b/fagman/DEBIAN/control
@@ -1,5 +1,5 @@
-Package: CNPS
+Package: fagman
 Version: 1.1
 Architecture: amd64 
-Maintainer: Asteroidus <asteroidus@protonmail.com>
-Description: create new project simply in rust
+Maintainer: none 
+Description: none
